use the lib generated by custom workspace generator

--- a/nx.json
+++ b/nx.json
@@ -33,6 +33,9 @@
     "demo-e2e": {
       "tags": [],
       "implicitDependencies": ["demo"]
+    },
+    "nx-conf": {
+      "tags": []
     }
   }
 }
