--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nrwl/nx-plugin": "^12.9.0",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,6 +23,7 @@
     "@nrwl/eslint-plugin-nx": "12.9.0",
     "@nrwl/jest": "12.9.0",
     "@nrwl/linter": "12.9.0",
+    "@nrwl/node": "12.9.0",
     "@nrwl/react": "12.9.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/web": "12.9.0",
@@ -46,6 +48,7 @@
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
+    "tslib": "^2.0.0",
     "typescript": "~4.3.5"
   }
 }
