--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
+    "showdown": "^1.9.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
